[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "2.1.1"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "src/foundrytools_cli/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "docs/source/conf.py"
search = 'release = "{current_version}"'
replace = 'release = "{new_version}"'
